Implement GitHub Copilot provider with OAuth Device Flow authentication
- Added documentation for GitHub Copilot setup and usage.
- Created OAuth utilities for handling device flow authentication.
- Implemented device flow logic for requesting device codes and polling for tokens.
- Developed secure token storage using AES-256-GCM encryption.
- Integrated GitHub Copilot API for chat completions and model information retrieval.
- Added error handling and retry logic for API requests.

--- a/.gitignore
+++ b/.gitignore
@@ -168,3 +168,9 @@ test_output/
 # API Keys - NEVER commit these
 api-keys.txt
 **/api-keys.txt
+
+# Local specify config
+.specify
+.ruff_cache
+specs/
+.github
