--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,9 @@ dependencies = [
     "google-auth>=2.37.0",
     "google-auth-oauthlib>=1.2.1",
     "openai>=1.59.0",
+    "pymysql>=1.1.0",
+    "psycopg2-binary>=2.9.9",
+    "pymongo>=4.6.1",
 ]
 
 [project.urls]
@@ -43,6 +46,8 @@ include = [
 dev = [
     "ruff>=0.11.13",
     "anthropic>=0.52.0",  # For MCP testing support
+    "pytest>=8.3.5",  # Testing framework
+    "pytest-asyncio>=1.3.0",  # Async test support
 ]
 
 [tool.ruff]
@@ -63,3 +68,10 @@ ignore = ["E501"]  # Line length handled by formatter
 "tests/**/*.py" = ["T201"]
 # Allow print statements in server.py for CLI output and test mode
 "src/consult7/server.py" = ["T201"]
+
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+python_files = "test_*.py"
+python_classes = "Test*"
+python_functions = "test_*"
+asyncio_default_fixture_loop_scope = "function"
